hide proxi share

--- a/templates/appPackage/manifest.local.template.json
+++ b/templates/appPackage/manifest.local.template.json
@@ -23,7 +23,19 @@
         "full": "Full description of LoomVideoMessaging."
     },
     "accentColor": "#FFFFFF",
-    "bots": [],
+    "bots": [
+        {
+            "botId": "{{localSettings.bot.botId}}",
+            "scopes": [
+                "personal",
+                "team",
+                "groupchat"
+            ],
+            "commandLists":[],
+            "supportsFiles": false,
+            "isNotificationOnly": false
+        }
+    ],
     "composeExtensions": [
         {
             "botId": "{{localSettings.bot.botId}}",
