--- a/templates/appPackage/manifest.local.template.json
+++ b/templates/appPackage/manifest.local.template.json
@@ -57,6 +57,16 @@
                         }
                     ]
                 }
+            ],
+            "messageHandlers": [
+                {
+                    "type": "link",
+                    "value": {
+                      "domains": [
+                        "*.loom.com"
+                      ]
+                    }
+                }
             ]
         }
     ],
